# akdata

./: .gitignore  README.md
.github/workflows/: daily-ingest.yml
client/: __init__.py  hub.py  pyproject.toml
data/daily/: 000001.parquet  000002.parquet  000006.parquet  000007.parquet  000008.parquet  000009.parquet  000010.parquet  000011.parquet  000012.parquet  000014.parquet  000016.parquet  000017.parquet  000019.parquet  000020.parquet  000021.parquet  000025.parquet  000026.parquet  000027.parquet  000028.parquet  000029.parquet  000030.parquet  000031.parquet  000032.parquet  000034.parquet  000035.parquet  000036.parquet  000037.parquet  000039.parquet  000042.parquet  000045.parquet  000048.parquet  000049.parquet  000050.parquet  000055.parquet  000056.parquet  000058.parquet  000059.parquet  000060.parquet  000061.parquet  000062.parquet  (+5161 more)
data/index/: indexes.parquet
data/meta/: symbols.parquet
data/weekly/symbol=000001/: data_0.parquet
data/weekly/symbol=000002/: data_0.parquet
data/weekly/symbol=000006/: data_0.parquet
data/weekly/symbol=000007/: data_0.parquet
data/weekly/symbol=000008/: data_0.parquet
data/weekly/symbol=000009/: data_0.parquet
data/weekly/symbol=000010/: data_0.parquet
data/weekly/symbol=000011/: data_0.parquet
data/weekly/symbol=000012/: data_0.parquet
data/weekly/symbol=000014/: data_0.parquet
data/weekly/symbol=000016/: data_0.parquet
data/weekly/symbol=000017/: data_0.parquet
data/weekly/symbol=000019/: data_0.parquet
scripts/: clean.py  derive.py  fetch.py  ip_pool.py
(+5202 files in other folders)
