[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "akdata"
version = "0.1.0"
description = "A股行情数据客户端"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/kai-aii/akdata"
